syntax = "proto3";

package Tours;
option csharp_namespace = "GrpcServiceTranscoding.Tours";

service ToursService {
  rpc CreateTour(CreateTourRequest) returns (Tour) {
  }
  rpc UpdateTour(UpdateTourRequest) returns (Tour) {
  }
}

message CreateTourRequest {
  string title = 1;             
  string description = 2;       
  TourDifficulty difficulty = 3;
  repeated Tag tags = 4;       
  string author_id = 5;
}

message UpdateTourRequest {
  int32 id = 1;                   
  string title = 2;
  string description = 3;
  TourDifficulty difficulty = 4;
  repeated Tag tags = 5;        
  string author_id = 6;
 }

message Tag {
  int32 id = 1;
  string name = 2;
}

message Tour {
  int32 id = 1;
  string title = 2;
  string description = 3;
  TourDifficulty difficulty = 4;
  repeated Tag tags = 5;
  double price = 6;      
  TourStatus status = 7;
  string author_id = 8;
}

enum TourDifficulty {
  EASY = 0;
  MEDIUM = 1;
  HARD = 2;
}

enum TourStatus {
  DRAFT = 0;
  PUBLISHED = 1;
  ARCHIVED = 2;
}